trying to fix alignment of author, image in index

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -113,3 +113,8 @@ h1.float-left {
   margin-right: 5px;
   margin-bottom:5px;
 }
+
+.index-last-img {
+  margin-top: 5px;
+  font-size: small;
+}
